Update image galleries and views to display full image while keeping aspect ratio

--- a/src/app/dialog-modals/product-details-dialog/product-details-dialog.component.html
+++ b/src/app/dialog-modals/product-details-dialog/product-details-dialog.component.html
@@ -12,7 +12,9 @@
 
   <div class="description">
     <div>{{product.description || 'This product has no description.'}}</div>
-    <div class="image" [style.background-image]="'url(' + product.getDefaultImagePath() + ')'"></div>
+    <div class="image">
+      <img src="{{product.getDefaultImagePath()}}" alt="">
+    </div>
   </div>
 
   <div class="details">
