--- a/src/app/pages/customer-advanced-page/item-components/product-item/product-item.component.html
+++ b/src/app/pages/customer-advanced-page/item-components/product-item/product-item.component.html
@@ -1,13 +1,15 @@
 <div class="product" *ngIf="product">
   <div class="name">{{product.product.name}} <mat-icon (click)="showProductDetails()">help_outline</mat-icon></div>
-  <div class="image-wrapper">
+  <div class="image-wrapper" [class.image-wrapper--blue]="product.product.getDefaultImagePath() === '/assets/images/product-default-image.svg'">
     <div class="returns-wrapper">
       <div class="return" *ngFor="let return of product.returns">
         <mat-icon>sync</mat-icon>
         <span>Returned ({{return.quantity}}) {{return.return.createdAt | formatDateTime: 'M/D/YY'}}</span>
       </div>
     </div>
-    <div class="image" [style.background-image]="'url(' + product.product.getDefaultImagePath() + ')'"></div>
+    <div class="image">
+      <img src="{{product.product.getDefaultImagePath()}}">
+    </div>
   </div>
   <div class="info">
     <div>SKU {{product.product.sku}}</div>
