--- a/src/app/pages/products-page/product-view/product-images-gallery/product-images-gallery.component.scss
+++ b/src/app/pages/products-page/product-view/product-images-gallery/product-images-gallery.component.scss
@@ -32,11 +32,14 @@
     .image {
       position: relative;
       display: flex;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      min-width: 280px;
-      min-height: 180px;
+      width: 280px;
+      height: 180px;
+
+      img {
+        max-height: 100%;
+        max-width: 100%;
+        margin: auto;
+      }
 
       .default {
         position: absolute;
