--- a/src/app/pages/customer-advanced-page/item-components/product-item/product-item.component.scss
+++ b/src/app/pages/customer-advanced-page/item-components/product-item/product-item.component.scss
@@ -22,15 +22,22 @@
 
   .image-wrapper {
     position: relative;
-    background: rgba(0,0,0,0.2);
+
+    &--blue {
+      background: #4478BD;
+    }
 
     .image {
+      margin: auto;
       display: flex;
-      width: 300px;
-      height: 170px;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+      width: 280px;
+      height: 180px;
+    }
+
+    img {
+      max-height: 100%;
+      max-width: 100%;
+      margin: auto;
     }
 
     .returns-wrapper {
