--- a/src/app/pages/customer-advanced-page/customer-advanced-fulfillment/customer-advanced-fulfillment.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-fulfillment/customer-advanced-fulfillment.component.html
@@ -4,7 +4,6 @@
     [items]="receipts"
     [columnParams]="columnParams"
     [options]="options"
-    [bulkOptions]="bulkOptions"
-    (itemClicked)="itemClicked($event)">
+    [bulkOptions]="bulkOptions">
   </table-memory-advanced>
 </div>
