--- a/src/app/pages/customer-advanced-page/customer-advanced-transactions/customer-advanced-transactions.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-transactions/customer-advanced-transactions.component.html
@@ -7,7 +7,6 @@
     [options]="options"
     [bulkOptions]="bulkOptions"
     (multiOptionSelected)="multiOptionSelected($event)"
-    (optionSelected)="optionSelected($event)"
-    (itemClicked)="itemClicked($event)">
+    (optionSelected)="optionSelected($event)">
   </table-memory-advanced>
 </div>
