--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
@@ -105,6 +105,7 @@
       .cell-data-wrapper {
         display: flex;
         align-items: center;
+        color: rgba(0, 0, 0, 0.87);
       }
 
       .cell-icon {
@@ -145,10 +146,6 @@
       font-size: 13px;
       font-weight: 500;
       text-align: center;
-    }
-
-    .clickable {
-      cursor: pointer;
     }
 
     .options-header {
