Fix validations on edit customer modal form

--- a/src/app/dialog-modals/add-customer-dialog/add-customer-dialog.component.html
+++ b/src/app/dialog-modals/add-customer-dialog/add-customer-dialog.component.html
@@ -13,11 +13,11 @@
       <input matInput type="text" [(ngModel)]="customer.lastName" placeholder="Last Name">
     </mat-form-field>
 
-    <mat-form-field [class.error]="formInvalid && !customer.email">
+    <mat-form-field [class.error]="formInvalid && !isEmailValid(customer.email)">
       <input matInput type="text" [(ngModel)]="customer.email" placeholder="Email">
     </mat-form-field>
 
-    <mat-form-field [class.error]="formInvalid && !customer.phone">
+    <mat-form-field>
       <input matInput type="text" [textMask]="{mask: mask, guide: false}" [(ngModel)]="customer.phone" placeholder="Phone">
     </mat-form-field>
 
@@ -27,7 +27,7 @@
       <input matInput type="text" [(ngModel)]="customer.address.line1" placeholder="Address 1">
     </mat-form-field>
 
-    <mat-form-field>
+    <mat-form-field [class.error]="formInvalid && customer.address.line2 && !isAddressValid(customer.address.line2)">
       <input matInput type="text" [(ngModel)]="customer.address.line2" placeholder="Address 2">
     </mat-form-field>
 
@@ -45,7 +45,7 @@
     </mat-form-field>
 
     <mat-form-field [class.error]="formInvalid && !isZipValid(customer.address.zip)">
-      <input matInput type="text" [(ngModel)]="customer.address.zip" placeholder="Zip">
+      <input matInput type="text" [(ngModel)]="customer.address.zip" placeholder="Zip" (keydown)="isAllowedZipKey($event)">
     </mat-form-field>
 
     <mat-form-field [class.error]="formInvalid && !isCountryValid(customer.address.country)">
