--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -197,10 +197,10 @@
                     </td>
                     <td class="mid">
                       <div class="flex-custom flex-custom--center price-edit-container">
-                        <mat-form-field class="input-align-right" [class.error]="productInEdit.id === product.id && productInEdit['error']" [class.solo]="productInEdit.id === product.id || !product.dynamicPrice || !product.dynamicPrice.enabled">
+                        <mat-form-field class="input-align-right" [class.solo]="productInEdit.id === product.id">
                           <input matInput currencyInput (keydown)="isEnter($event)" [initPrice]="productInEdit.id === product.id ? productInEdit.defaultPrice : product.defaultPrice ? product.defaultPrice : product.initialCycleSchedulesPrice" [disabled]="productInEdit.id !== product.id" (priceChanged)="setProductInEditPrice($event)" name="defaultPrice" type="text">
                         </mat-form-field>
-                        <mat-icon *ngIf="productInEdit.id !== product.id && product.dynamicPrice && product.dynamicPrice.enabled" (click)="setProductInEdit(product)">edit</mat-icon>
+                        <mat-icon *ngIf="productInEdit.id !== product.id" (click)="setProductInEdit(product)">edit</mat-icon>
                       </div>
                     </td>
                     <td class="mid"><mat-icon (click)="removeProduct(product)">delete</mat-icon></td>
