--- a/src/app/pages/products-page/product-view/product-view.component.scss
+++ b/src/app/pages/products-page/product-view/product-view.component.scss
@@ -182,15 +182,16 @@
     .placeholder-error {
       color: $danger-color;
     }
-
-    mat-icon {
-      margin-left: auto;
-      color: #5F6368;
-      font-size: 18px;
-      width: 18px;
-      height: 18px;
-    }
   }
+}
+
+.dropdown-icon {
+  margin-left: auto;
+  color: #5F6368;
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
 }
 
 .new-fulfillment {
