Update shipping price copy on create order modal

--- a/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
+++ b/src/app/orders/create-order/create-order-preview/create-order-preview.component.html
@@ -20,7 +20,7 @@
       <div class="summary">
         <div class="summary__column">
           <div>Item(s) Subtotal</div>
-          <div>Shipping</div>
+          <div>Shipping Price</div>
           <div>Total</div>
         </div>
         <div class="summary__column">
