--- a/src/app/orders/create-order/create-order-summary/create-order-summary.component.html
+++ b/src/app/orders/create-order/create-order-summary/create-order-summary.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="item">
-    <div class="key">Total Shipping</div>
+    <div class="key">Shipping Price</div>
     <div class="value">{{shipping.usd()}}</div>
   </div>
 
