--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -288,7 +288,7 @@
                 <div class="expansion-header">
                   <span class="title">
                     <mat-icon *ngIf="selectedTotalShippingPrice; else placeholder">done</mat-icon>
-                    Shipping
+                    Total Shipping Price
                   </span>
 
                   <mat-chip-list  [selectable]="false">
