--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -77,7 +77,7 @@
                       <input type="text" matInput [(ngModel)]="selectedCustomer.lastName" placeholder="Last Name" name="lastname" required>
                     </mat-form-field>
                     <mat-form-field [class.error]="newCustomerInvalid && !selectedCustomer.phone">
-                      <input type="text" matInput [textMask]="{mask: mask, guide: false}" [(ngModel)]="selectedCustomer.phone" placeholder="Phone" name="phone" required>
+                      <input type="text" matInput [(ngModel)]="selectedCustomer.phone" placeholder="Phone" name="phone" required>
                     </mat-form-field>
                     <mat-form-field [class.error]="newCustomerInvalid && !selectedCustomer.email">
                       <input type="text" matInput [(ngModel)]="selectedCustomer.email" (keydown)="isAllowedEmailKey($event, selectedCustomer.email)" placeholder="Email" name="email" required>
