--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -26,7 +26,14 @@
           <mat-tab-group class="tab--no-header tab--body-fit" [(selectedIndex)]="selectedIndex">
 
             <mat-tab>
-              <customer-advanced-subscriptions [rebills]="rebills" [sessionMode]="sessionId"></customer-advanced-subscriptions>
+
+              <customer-advanced-subscriptions
+                      [rebills]="rebills"
+                      [confirmationSessions]="confirmationSessions"
+                      [sessionMode]="sessionId"
+                      (confirmDelivery)="confirmDelivery($event)"
+                      (confirmTrial)="confirmTrial($event)">
+              </customer-advanced-subscriptions>
             </mat-tab>
             <mat-tab>
               <customer-advanced-orders [orders]="orders" [selectedOrder]="selectedOrder" (transactionRefunded)="refreshTransactions()" (orderSelected)="setSelectedOrder($event)"></customer-advanced-orders>
