Update confirmation item component

--- a/src/app/pages/customer-advanced-page/confirmation-item/confirmation-item.component.html
+++ b/src/app/pages/customer-advanced-page/confirmation-item/confirmation-item.component.html
@@ -32,7 +32,7 @@
 
     <div class="item">
       <div>Campaign</div>
-      <div>{{sessionConfirmation.campaign.id}}</div>
+      <div>{{sessionConfirmation.campaign.name}}</div>
     </div>
 
     <div class="item">
