Fix glitches on product schedule timeline

--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -18,9 +18,10 @@
 
       <mat-tab>
         <schedules-detailed
+          *ngIf="productScheduleDup"
           [statusMessage]="updateError ? 'Error occurred on save' : productScheduleWaitingForUpdate ? 'Saving...' : 'All changes saved'"
           [singleScheduleMode]="true"
-          [productSchedules]="[entity]"
+          [productSchedules]="[productScheduleDup]"
           [startDate]="startDate"
           (productSchedulesChanged)="productSchedulesChanged($event)"
           (detailsComponent)="setDetails($event)">
