Change copy on sms provider validation

--- a/src/app/pages/sms-providers-page/sms-provider-view/sms-provider-validate/sms-provider-validate.component.html
+++ b/src/app/pages/sms-providers-page/sms-provider-view/sms-provider-validate/sms-provider-validate.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__card smtp-validation">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">Validate SMTP Provider</div>
+    <div class="entity-view__card__header__title">Validate SMS Provider</div>
   </div>
 
   <div class="flex-custom">
