fixed customer order detail header css and tab order for customer advanced view

--- a/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
+++ b/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
@@ -73,6 +73,10 @@
   color: rgba(0,0,0,0.24) !important;
 }
 
+.refund-order-button{
+  background: #FFD21F!important;
+}
+
 .general {
   padding: 20px;
 
